# 2023Z-DataVisualizationTechniques

./: .gitignore  README.md
Agata_Krawczyk/: Countries-Europe.csv
BokhanKatsiaryna/: HW3.R  HW3.Rmd  HW3.html
CwalinaJan/: proton.R
Gimzicka_Lesniak_Szczesna/kody/: aminoacids.R  food_nutrients.R  skrypt.r
GuzikMikolaj/: chonikaa.R
homeworks/ZywickiTomasz/: HW1_tasks.R
homeworks/hw0/: lab1.R  labiki1.R  proton.R
homeworks/hw1/: .Rhistory  CwalinaJan HW1  HW1_tasks.R  README.md
homeworks/hw3/: MomotMaciej HW3.R
homeworks/hw4/: HW4_Seweryn.R
homeworks/hw5/: hw5.R
homeworks/hw6/: .gitkeep
labs/lab1/: lab1.R  lab1_sol.R  lab2.R
labs/lab11/: lab11.ipynb
labs/lab12/: lab12.ipynb  lab12_sol.ipynb
labs/lab14/: lab14.ipynb
labs/lab15/: lab15.ipynb
labs/lab2/: lab2.R  lab2_sol.R
labs/lab3/: lab3.R  lab3_sol.R
labs/lab4/: lab4.R
labs/lab5/: lab5.R  lab5_sol.R
labs/lab6/: lab6.R  lab6_sol.R  pop_and_area.csv
projects/project2/Kolodziej_Iwaniuk_Bihniak/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
projects/project2/Kolodziej_Iwaniuk_Bihniak/project_me/: app.py  index.py  layouts.py
projects/project2/Kolodziej_Iwaniuk_Bihniak/project_me/data/routes/: test1.gpx  test2.gpx  test3.gpx
projects/project2/Kolodziej_Iwaniuk_Bihniak/project_me/data/run_stats/: activities.csv  conventer.py  data1.csv  data2.csv  data3.csv
projects/project2/Kolodziej_Iwaniuk_Bihniak/project_me/pages/: __init__.py  about.py  main.py  map.py  stats.py
projects/project2/Kolodziej_Iwaniuk_Bihniak/project_me/pages/components/: __init__.py  top.py
(+1146 files in other folders)
